[gd_scene load_steps=23 format=3 uid="uid://bu28jmi2shbnf"]

[ext_resource type="Script" uid="uid://ce1q5kphlvo4r" path="res://Scripts/card.gd" id="1_poweq"]
[ext_resource type="Texture2D" uid="uid://droi2ua32dcav" path="res://Art/Sprites/spr_card_back.png" id="2_hxgmw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cv45m"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 20.0
expand_margin_top = 20.0
expand_margin_right = 20.0
expand_margin_bottom = 20.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c4fu1"]
bg_color = Color(0.6, 0.6, 0.6, 0)
shadow_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wd0vl"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.282353)
shadow_size = 1
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tfrst"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_offset = Vector2(5, 0)

[sub_resource type="LabelSettings" id="LabelSettings_wd0vl"]
font_size = 30

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r2545"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wd0vl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dpewa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_slvil"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v3h6j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1n4c5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i1o2d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uvs3r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_224sy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5s5d0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g1q3b"]

[sub_resource type="Animation" id="Animation_c4fu1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/CardVisual:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container/CardContents/Front:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container/CardContents/Front:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Container/CardContents/TextureRect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Container/CardContents/TextureRect:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_r2545"]
resource_name = "flip_to_back"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/CardVisual:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.366022, 0.176777),
"update": 0,
"values": [Vector2(1, 1), Vector2(-1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container/CardContents/Front:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.366, 0.176),
"update": 0,
"values": [Vector2(1, 1), Vector2(-1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container/CardContents/Front:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(0.366, 0.176),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Container/CardContents/TextureRect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Container/CardContents/TextureRect:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.176, 0.366),
"update": 0,
"values": [Vector2(-1, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_tfrst"]
resource_name = "flip_to_front"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/CardVisual:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.366022, 0.176777),
"update": 0,
"values": [Vector2(-1, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container/CardContents/Front:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.366, 0.176),
"update": 0,
"values": [Vector2(-1, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container/CardContents/Front:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.23, 0.233333),
"transitions": PackedFloat32Array(0.366, 0.176, 0.176),
"update": 1,
"values": [false, true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Container/CardContents/TextureRect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.23),
"transitions": PackedFloat32Array(0.366, 0.176),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Container/CardContents/TextureRect:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.366, 0.176),
"update": 0,
"values": [Vector2(1, 1), Vector2(-1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c4fu1"]
_data = {
&"RESET": SubResource("Animation_c4fu1"),
&"flip_to_back": SubResource("Animation_r2545"),
&"flip_to_front": SubResource("Animation_tfrst")
}

[node name="TemplateCard" type="Node2D"]
script = ExtResource("1_poweq")

[node name="Container" type="Control" parent="."]
custom_minimum_size = Vector2(250, 350)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -175.0
offset_right = 125.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
pivot_offset = Vector2(125, 175)

[node name="CardVisual" type="Panel" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(-1, 1)
pivot_offset = Vector2(125, 175)
theme_override_styles/panel = SubResource("StyleBoxFlat_cv45m")

[node name="CardContents" type="Panel" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(125, 175)
theme_override_styles/panel = SubResource("StyleBoxFlat_c4fu1")

[node name="Front" type="VBoxContainer" parent="Container/CardContents"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(125, 175)

[node name="ImageHolder" type="Panel" parent="Container/CardContents/Front"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxFlat_wd0vl")

[node name="ImagePlaceholder" type="Label" parent="Container/CardContents/Front/ImageHolder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_tfrst")
text = "CARD_IMAGE"
label_settings = SubResource("LabelSettings_wd0vl")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="Image" type="TextureRect" parent="Container/CardContents/Front/ImageHolder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Container/CardContents"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(140, 200)
texture = ExtResource("2_hxgmw")

[node name="Button" type="Button" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -19.0
offset_top = -18.0
offset_right = 19.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_r2545")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_wd0vl")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_dpewa")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_slvil")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_v3h6j")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_1n4c5")
theme_override_styles/hover = SubResource("StyleBoxEmpty_i1o2d")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_uvs3r")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_224sy")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_5s5d0")
theme_override_styles/normal = SubResource("StyleBoxEmpty_g1q3b")
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_c4fu1")
}
